/publications author row_status filters added
