# app/Http/Controllers/PublicationController.php
@@ -44,7 +44,23 @@ class PublicationController extends Controller
     public function getList(Request $request): JsonResponse
     {
         $filter = $this->publicationService->filterValidator($request)->validate();
-        $response = $this->publicationService->getPublicationList($filter, $this->startTime);
+        $returnedData = $this->publicationService->getPublicationList($filter, $this->startTime);
+
+        $response = [
+            'order' => $returnedData['order'],
+            'data' => $returnedData['data'],
+            '_response_status' => [
+                "success" => true,
+                "code" => ResponseAlias::HTTP_OK,
+                'query_time' => $returnedData['query_time']
+            ]
+        ];
+        if (isset($returnedData['total_page'])) {
+            $response['total'] = $returnedData['total'];
+            $response['current_page'] = $returnedData['current_page'];
+            $response['total_page'] = $returnedData['total_page'];
+            $response['page_size'] = $returnedData['page_size'];
+        }
         return Response::json($response, ResponseAlias::HTTP_OK);
 
     }
